syntax = "proto3";
package core.protos.playbooks;

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";


message McpServer {
  message ListToolsTask {
    // No additional parameters needed for listing tools
  }

  message ExecuteToolTask {
    google.protobuf.StringValue tool_name = 1;
    google.protobuf.StringValue tool_arguments = 2;
    google.protobuf.StringValue session_id = 3;
  }

  enum TaskType {
    UNKNOWN = 0;
    LIST_TOOLS = 1;
    EXECUTE_TOOL = 2;
  }

  TaskType type = 1;
  oneof task {
    ListToolsTask list_tools = 2;
    ExecuteToolTask execute_tool = 3;
  }
}